--- a/medium/article.mustache
+++ b/medium/article.mustache
@@ -35,18 +35,17 @@
 
 <div class="container pt-4 pb-4">
 	<div class="row">
-		<div class="col-lg-2 pr-4 mb-4 col-md-12">
+		<div class="col-lg-2 pr-0 mb-4 col-md-12">
 			<div class="sticky-top text-center">
 				<div class="text-muted">
-					Share this
+					Share
 				</div>
 				<div class="share d-inline-block">
 					<!-- AddToAny BEGIN -->
 					<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-						<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-						<a class="a2a_button_facebook"></a>
-						<a class="a2a_button_twitter"></a>
-            <a class="a2a_button_linkedin"></a>
+						<a class="a2a_button_facebook mb-3"></a>
+						<a class="a2a_button_twitter mb-3"></a>
+            <a class="a2a_button_linkedin mb-3"></a>
             <a class="a2a_button_reddit"></a>
 					</div>
 					<script async src="https://static.addtoany.com/menu/page.js"></script>
@@ -82,7 +81,9 @@
 </div>
 
 <div class="container pt-4 pb-4">
-	<h5 class="font-weight-bold spanborder"><span>Read next</span></h5>
+	<h5 class="font-weight-bold spanborder">
+    <span>Read next</span>
+  </h5>
 	<div class="row">
 		<div class="col-lg-6">
 			<div class="card border-0 mb-4 box-shadow h-xl-300">
