--- a/medium/partials/scripts.mustache
+++ b/medium/partials/scripts.mustache
@@ -1,4 +1,5 @@
-<script src="/medium/js/vendor/jquery.min.js" type="text/javascript"></script>
-<script src="/medium/js/vendor/popper.min.js" type="text/javascript"></script>
-<script src="/medium/js/vendor/bootstrap.min.js" type="text/javascript"></script>
-<script src="/medium/js/functions.js" type="text/javascript"></script>
+<script type="text/javascript" src="/medium/js/vendor/jquery.min.js"></script>
+<script type="text/javascript" src="/medium/js/vendor/popper.min.js"></script>
+<script type="text/javascript" src="/medium/js/vendor/bootstrap.min.js"></script>
+<script type="text/javascript" src="/medium/js/vendor/magnific-popup.min.js"></script>
+<script type="text/javascript" src="/medium/js/functions.js"></script>
