login and register links

--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -18,13 +18,13 @@
 				<a class="nav-link" href="/posts?category=tech">Tech</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/posts?category=politics">Politics</a>
-			</li>
-			<li class="nav-item">
 				<a class="nav-link" href="/about">About</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#" style="color:#03a87c" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
+			</li>
 			<li class="nav-item highlight ml-4">
-				<a style="background:#03a87c;color:#fff !important" class="nav-link" href="#">JOIN VERTEX</a>
+				<a style="background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
 			</li>
 		</ul>
 	</div>
