import magnific popup css

--- a/medium/partials/head.mustache
+++ b/medium/partials/head.mustache
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville%3A400%2C700%2C400italic%7CKarla%3A400%2C400italic%2C700%2C700italic%26subset%3Dlatin%2Clatin-ext&#038;subset=latin%2Clatin-ext" type="text/css" media="all"/>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <link rel="stylesheet" href="/medium/css/main.css" />
+<link rel="stylesheet" href="/medium/css/magnific-popup.css" />
 <style>
   .post-preview a {
     text-decoration: none;
