include auth partial

--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -13,7 +13,7 @@
 			<div class="row justify-content-between">
 				<div class="col-md-12 pt-4 pb-5 align-self-center">
 					<h1 class="secondfont mb-3 font-weight-bold">
-            Own Your Brand.
+            Build Your Brand.
           </h1>
 					<p class="mb-3 lead">
             Vertex 360 is a platform for content creators in the modern media age.
@@ -108,8 +108,8 @@
 		</div>
 	</div>
 </div>
-
   {{>footer}}
+  {{>auth}}
   {{>scripts}}
 </body>
 </html>
