--- a/medium/partials/scripts.mustache
+++ b/medium/partials/scripts.mustache
@@ -1,3 +1,47 @@
+<script>
+  var vertexLib = {
+    postRequest: function(url, params, completion){
+      $.ajax({
+        url: url,
+        type: 'POST',
+        data: params,
+        success: function(response){
+          if (response.confirmation != 'success'){
+            completion(response, null)
+            return
+          }
+
+          completion(null, response)
+        },
+        error: function(response){
+          completion(response, null)
+        }
+      })
+    },
+
+    getRequest: function(url, params, completion){
+      $.ajax({
+        url: url,
+        type: 'GET',
+        data: params,
+        success: function(response){
+          if (response.confirmation != 'success'){
+            completion(response, null)
+            return
+          }
+
+          completion(null, response)
+        },
+        error: function(response){
+          completion(response, null)
+        }
+      })
+    }
+  }
+
+  window.vertexLib = vertexLib
+</script>
+
 <script type="text/javascript" src="/medium/js/vendor/jquery.min.js"></script>
 <script type="text/javascript" src="/medium/js/vendor/popper.min.js"></script>
 <script type="text/javascript" src="/medium/js/vendor/bootstrap.min.js"></script>
