add preloaded data

--- a/medium/partials/scripts.mustache
+++ b/medium/partials/scripts.mustache
@@ -42,8 +42,10 @@
   window.vertexLib = vertexLib
 </script>
 
+<script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
 <script type="text/javascript" src="/medium/js/vendor/jquery.min.js"></script>
 <script type="text/javascript" src="/medium/js/vendor/popper.min.js"></script>
 <script type="text/javascript" src="/medium/js/vendor/bootstrap.min.js"></script>
 <script type="text/javascript" src="/medium/js/vendor/magnific-popup.min.js"></script>
 <script type="text/javascript" src="/medium/js/functions.js"></script>
+<script src="{{{cdn}}}/scripts/auth.js"></script>
