add id attributes to login and register nav items

--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -20,10 +20,10 @@
 			<li class="nav-item">
 				<a class="nav-link" href="/about">About</a>
 			</li>
-			<li class="nav-item">
+			<li class="nav-item" id="nav-login">
 				<a class="nav-link" href="#" style="color:#03a87c" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
 			</li>
-			<li class="nav-item highlight ml-4">
+			<li class="nav-item highlight ml-4" id="login-container">
 				<a style="background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
 			</li>
 		</ul>
