--- a/medium/article.mustache
+++ b/medium/article.mustache
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>{{post.title}}</title>
+  <meta name="description" content="{{post.preview}}" />
+
+  <meta property="og:title" content="Vertex 360 | {{post.title}}" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://www.vertex360.co/post/{{post.slug}}" />
+  <meta property="og:image" content="{{{post.image}}}=s260-c" />
+  <meta property="og:image:width" content="260px" />
+  <meta property="og:image:height" content="260px" />
+  <meta property="og:description" content="{{post.preview}}" />
+
   {{>head}}
 </head>
 <body>
