--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Vertex 360</title>
+  <meta name="description" content="" />
   {{>head}}
 </head>
 
