link to new pages admin

--- a/medium/account.mustache
+++ b/medium/account.mustache
@@ -181,7 +181,7 @@
             </div>
             <div class="buttons-to-right" style="bottom:0%;top:unset;opacity:1.0">
               <a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-share-alt"></i> View Site</a>
-              <a href="/admin/{{slug}}" class="button"><i class="sl sl-icon-close"></i> Manage</a>
+              <a href="/admin/pages/{{slug}}" class="button"><i class="sl sl-icon-close"></i> Manage</a>
             </div>
           </li>
           {{/sites}}
