primary article on home page

--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -10,24 +10,22 @@
   {{>nav}}
 
 <div class="container">
-	<div class="jumbotron jumbotron-fluid mb-3 pt-0 mt-4 pb-0 bg-lightblue position-relative">
-		<div class="pl-4 pr-4 h-100 tofront">
-			<div class="row justify-content-between">
-				<div class="col-md-12 pt-4 pb-5 align-self-center">
-					<h1 class="secondfont mb-3 font-weight-bold">
-            Build Your Brand.
+	<div style="background-position: 50%;background-image:url('https://lh3.googleusercontent.com/1arnINnEBE0l1OwBhY3UcyAPYvG7zlFVlS3iXbarnAjKeWTRk_vJTQLkhAMpcpxP-PuRP1F3WvNs84_1Mo310m_MNkM=s1024');" class="jumbotron jumbotron-fluid mb-3 pt-0 mt-4 pb-0 pr-0 pl-0 position-relative">
+		<div class="pl-4 pr-4 h-100 tofront" style="background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.6));">
+			<div class="row justify-content-between" style="padding-top:96px">
+				<div class="col-md-12 pt-6 pb-4 align-self-center">
+					<h1 class="secondfont mb-3 font-weight-bold" style="color:#f3f3f3">
+            Service Business Website Must Haves
           </h1>
-					<p class="mb-3 lead">
-            Vertex 360 is a platform for content creators in the modern media age.
-            Whether you manage a YouTube channel, podcast, blog, Instagram folowing,
-            or all of the above, Vertex 360 provides the best way to deliver your
-            content under a unified, coherent brand that you control.
+					<p class="mb-0 lead" style="color:#f3f3f3">
+            If you have a service business, there a couple key pages that your website needs. Amongst all service-based businesses, no matter what niche they are in, there are certain pages that are crucial to th...<a href="#">read more</a>
 					</p>
-					<a href="/about" class="btn btn-danger">Learn More</a>
 				</div>
 			</div>
 		</div>
 	</div>
+
+  </div>
 </div>
 <!-- End Header -->
 
@@ -62,49 +60,12 @@
 		</div>
 		<div class="col-md-4 pl-4">
       <div class="sticky-top">
-        <h5 class="font-weight-bold spanborder"><span>Popular</span></h5>
-        <ol class="list-featured">
-  				<li>
-  					<span>
-  						<h6 class="font-weight-bold">
-  						<a href="./article.html" class="text-dark">Did Supernovae Kill Off Large Ocean Animals?</a>
-  						</h6>
-  						<p class="text-muted mb-4">
-  							Jake Bittle in SCIENCE
-  						</p>
-  					</span>
-  				</li>
-  				<li>
-  					<span>
-  						<h6 class="font-weight-bold">
-  						<a href="./article.html" class="text-dark">Humans Reversing Climate Clock: 50 Million Years</a>
-  						</h6>
-  						<p class="text-muted mb-4">
-  							Jake Bittle in SCIENCE
-  						</p>
-  					</span>
-  				</li>
-  				<li>
-  					<span>
-  						<h6 class="font-weight-bold">
-  						<a href="./article.html" class="text-dark">Unprecedented Views of the Birth of Planets</a>
-  						</h6>
-  						<p class="text-muted mb-4">
-  							Jake Bittle in SCIENCE
-  						</p>
-  					</span>
-  				</li>
-  				<li>
-  					<span>
-  						<h6 class="font-weight-bold">
-  						<a href="./article.html" class="text-dark">Effective New Target for Mood-Boosting Brain Stimulation Found</a>
-  						</h6>
-  						<p class="text-muted mb-4">
-  							Jake Bittle in SCIENCE
-  						</p>
-  					</span>
-  				</li>
-  			</ol>
+        <h5 class="font-weight-bold spanborder"><span>About</span></h5>
+        <div style="padding:24px;background:#f3f3f3">
+          <h2>Build Your Brand</h2>
+          <p>Vertex 360 is a platform for content creators in the modern media age. Whether you manage a YouTube channel, podcast, blog, Instagram folowing, or all of the above, Vertex 360 provides the best way to deliver your content under a unified, coherent brand that you control.</p>
+          <a href="/about" class="btn btn-danger w-100">Learn More</a>
+        </div>
       </div>
 
 		</div>
