hyperlinks on main article header

--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -15,10 +15,10 @@
 			<div class="row justify-content-between" style="padding-top:96px">
 				<div class="col-md-12 pt-6 pb-4 align-self-center">
 					<h1 class="secondfont mb-3 font-weight-bold" style="color:#f3f3f3">
-            Service Business Website Must Haves
+            <a style="color:#f3f3f3;text-decoration:none" href="#">Service Business Website Must Haves</a>
           </h1>
-					<p class="mb-0 lead" style="color:#f3f3f3">
-            If you have a service business, there a couple key pages that your website needs. Amongst all service-based businesses, no matter what niche they are in, there are certain pages that are crucial to th...<a href="#">read more</a>
+					<p class="mb-0 lead">
+            <a style="color:#f3f3f3;text-decoration:none" href="#">If you have a service business, there a couple key pages that your website needs. Amongst all service-based businesses, no matter what niche they are in, there are certain pages that are crucial to th...</a><a style="text-decoration:none" href="#">read more</a>
 					</p>
 				</div>
 			</div>
