sidebar explanation box

--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -11,7 +11,7 @@
 
 <div class="container">
 	<div style="background-position: 50%;background-image:url('https://lh3.googleusercontent.com/1arnINnEBE0l1OwBhY3UcyAPYvG7zlFVlS3iXbarnAjKeWTRk_vJTQLkhAMpcpxP-PuRP1F3WvNs84_1Mo310m_MNkM=s1024');" class="jumbotron jumbotron-fluid mb-3 pt-0 mt-4 pb-0 pr-0 pl-0 position-relative">
-		<div class="pl-4 pr-4 h-100 tofront" style="background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.6));">
+		<div class="pl-4 pr-4 h-100 tofront" style="background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.65));">
 			<div class="row justify-content-between" style="padding-top:96px">
 				<div class="col-md-12 pt-6 pb-4 align-self-center">
 					<h1 class="secondfont mb-3 font-weight-bold" style="color:#f3f3f3">
@@ -61,8 +61,11 @@
 		<div class="col-md-4 pl-4">
       <div class="sticky-top">
         <h5 class="font-weight-bold spanborder"><span>About</span></h5>
-        <div style="padding:24px;background:#f3f3f3">
+        <div style="padding:24px;background:#dedafb">
           <h2>Build Your Brand</h2>
+          <div class="text-center mb-4 mt-3">
+            <img style="max-width:200px" src="https://lh3.googleusercontent.com/uFcvuH_Yifl0PaAMqcNIvuUqXl67M2hc54S523D1pwceSWrphPExoGe2rhPauCNjTgxzVQWSUolQTNeoow4m9mK5ibI" />
+          </div>
           <p>Vertex 360 is a platform for content creators in the modern media age. Whether you manage a YouTube channel, podcast, blog, Instagram folowing, or all of the above, Vertex 360 provides the best way to deliver your content under a unified, coherent brand that you control.</p>
           <a href="/about" class="btn btn-danger w-100">Learn More</a>
         </div>
