--- a/medium/article.mustache
+++ b/medium/article.mustache
@@ -69,52 +69,22 @@
 			<article class="article-post">
         {{{post.text}}}
 			</article>
-			<div class="border p-5 bg-lightblue">
-				<div class="row justify-content-between">
-					<div class="col-md-5 mb-2 mb-md-0">
-						<h5 class="font-weight-bold secondfont">Become a member</h5>
-						 Get the latest news right in your inbox. We never spam!
-					</div>
-					<div class="col-md-7">
-						<div class="row">
-							<div class="col-md-12">
-								<input type="text" class="form-control" placeholder="Enter your e-mail address">
-							</div>
-							<div class="col-md-12 mt-2">
-								<button type="submit" class="btn btn-success btn-block">Subscribe</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+      <div style="padding:24px;background:#dedafb">
+        <h2>Build Your Brand</h2>
+        <img style="max-width:200px;float:right;margin-left:16px" src="https://lh3.googleusercontent.com/uFcvuH_Yifl0PaAMqcNIvuUqXl67M2hc54S523D1pwceSWrphPExoGe2rhPauCNjTgxzVQWSUolQTNeoow4m9mK5ibI" />
+        <p style="height:170px">Vertex 360 is a platform for content creators in the modern media age. Whether you manage a YouTube channel, podcast, blog, Instagram folowing, or all of the above, Vertex 360 provides the best way to deliver your content under a unified, coherent brand that you control.</p>
+        <a href="/about" class="btn btn-danger w-100">Learn More</a>
+      </div>
 		</div>
 	</div>
 </div>
 
 <div class="container pt-4 pb-4">
-	<h5 class="font-weight-bold spanborder">
-    <span>Read next</span>
-  </h5>
 	<div class="row">
-		<div class="col-lg-6">
-			<div class="card border-0 mb-4 box-shadow h-xl-300">
-				<div style="background-image: url(/img/demo/3.jpg); height: 150px; background-size: cover; background-repeat: no-repeat;">
-				</div>
-				<div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
-					<h2 class="h4 font-weight-bold">
-					<a class="text-dark" href="#">Brain Stimulation Relieves Depression Symptoms</a>
-					</h2>
-					<p class="card-text">
-						 Researchers have found an effective target in the brain for electrical stimulation to improve mood in people suffering from depression.
-					</p>
-					<div>
-						<small class="d-block"><a class="text-muted" href="./author.html">Favid Rick</a></small>
-						<small class="text-muted">Dec 12 · 5 min read</small>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-6">
+		<div class="col-lg-8 offset-lg-2">
+      <h5 class="font-weight-bold spanborder">
+        <span>Read next</span>
+      </h5>
 			<div class="flex-md-row mb-4 box-shadow h-xl-300">
 				<div class="mb-3 d-flex align-items-center">
 					<img height="80" src="/img/demo/blog4.jpg">
@@ -154,6 +124,7 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
 </div>
 <!-- End Main -->
