footer home link

--- a/medium/partials/footer.mustache
+++ b/medium/partials/footer.mustache
@@ -2,7 +2,9 @@
 	<footer class="bg-white border-top p-3 text-muted small">
 	<div class="row align-items-center justify-content-between">
 		<div>
-			<img class="mr-3 mb-3" style="max-width:120px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+			<a href="/">
+				<img class="mr-3 mb-3" style="max-width:120px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+			</a>
 			Copyright &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved.
 		</div>
 	</div>
