--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -14,7 +14,7 @@
 		<div class="pl-4 pr-4 h-100 tofront" style="background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.65));">
 			<div class="row justify-content-between" style="padding-top:96px">
 				<div class="col-md-12 pt-6 pb-4 align-self-center">
-					<h1 class="secondfont mb-3 font-weight-bold" style="color:#f3f3f3">
+					<h1 class="mb-3" style="color:#f3f3f3">
             <a style="color:#f3f3f3;text-decoration:none" href="#">Service Business Website Must Haves</a>
           </h1>
 					<p class="mb-0 lead">
