--- a/medium/partials/scripts.mustache
+++ b/medium/partials/scripts.mustache
@@ -1,8 +1,3 @@
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
-<script type="text/javascript" src="{{{cdn}}}/scripts/vertex-lib.js"></script>
-<script type="text/javascript" src="{{{cdn}}}/medium/js/vendor/jquery.min.js"></script>
-<script type="text/javascript" src="{{{cdn}}}/medium/js/vendor/popper.min.js"></script>
-<script type="text/javascript" src="{{{cdn}}}/medium/js/vendor/bootstrap.min.js"></script>
-<script type="text/javascript" src="{{{cdn}}}/medium/js/vendor/magnific-popup.min.js"></script>
-<script type="text/javascript" src="{{{cdn}}}/medium/js/functions.js"></script>
+<script type="text/javascript" src="{{{cdn}}}/medium/js/vendor.min.js"></script>
 <script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
