header row for featured posts

--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -9,23 +9,66 @@
 <body>
   {{>nav}}
 
-<div class="container">
-	<div style="background-position: 50%;background-image:url('https://lh3.googleusercontent.com/1arnINnEBE0l1OwBhY3UcyAPYvG7zlFVlS3iXbarnAjKeWTRk_vJTQLkhAMpcpxP-PuRP1F3WvNs84_1Mo310m_MNkM=s1024');" class="jumbotron jumbotron-fluid mb-3 pt-0 mt-4 pb-0 pr-0 pl-0 position-relative">
-		<div class="pl-4 pr-4 h-100 tofront" style="background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.65));">
-			<div class="row justify-content-between" style="padding-top:96px">
-				<div class="col-md-12 pt-6 pb-4 align-self-center">
-					<h1 class="mb-3" style="color:#f3f3f3">
-            <a style="color:#f3f3f3;text-decoration:none" href="#">Service Business Website Must Haves</a>
-          </h1>
-					<p class="mb-0 lead">
-            <a style="color:#f3f3f3;text-decoration:none" href="#">If you have a service business, there a couple key pages that your website needs. Amongst all service-based businesses, no matter what niche they are in, there are certain pages that are crucial to th...</a><a style="text-decoration:none" href="#">read more</a>
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="container pt-5">
+  <div class="row">
+    <div class="col-lg-4 col-md-4">
+      <div class="card mb-3" style="border:1px solid #ededed">
+        <div style="height:220px;overflow:hidden;">
+          <a href="#">
+            <img src="https://lh3.googleusercontent.com/1arnINnEBE0l1OwBhY3UcyAPYvG7zlFVlS3iXbarnAjKeWTRk_vJTQLkhAMpcpxP-PuRP1F3WvNs84_1Mo310m_MNkM=s512-c" />
+          </a>
+        </div>
+        <div style="padding:16px;background:#f1f1f1">
+          <small>July 5, 2019</small>
+          <h4>
+            <a style="color:#333" href="#">Service Business Website Must Haves</a>
+          </h4>
+          <p class="mt-3">
+            <a style="color:#333" href="#">If you have a service business, there a couple key pages that your website...</a><a href="#">read more</a>
+          </p>
+        </div>
+      </div>
+    </div>
 
+    <div class="col-lg-4 col-md-4">
+      <div class="card mb-3" style="border:1px solid #ededed">
+        <div style="height:220px;overflow:hidden;">
+          <a href="#">
+            <img src="https://lh3.googleusercontent.com/1arnINnEBE0l1OwBhY3UcyAPYvG7zlFVlS3iXbarnAjKeWTRk_vJTQLkhAMpcpxP-PuRP1F3WvNs84_1Mo310m_MNkM=s512-c" />
+          </a>
+        </div>
+        <div style="padding:16px;background:#f1f1f1">
+          <small>July 5, 2019</small>
+          <h4>
+            <a style="color:#333" href="#">Service Business Website Must Haves</a>
+          </h4>
+          <p class="mt-3">
+            <a style="color:#333" href="#">If you have a service business, there a couple key pages that your website...</a><a href="#">read more</a>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-4">
+      <div class="card mb-3" style="border:1px solid #ededed">
+        <div style="height:220px;overflow:hidden;">
+          <a href="#">
+            <img src="https://lh3.googleusercontent.com/1arnINnEBE0l1OwBhY3UcyAPYvG7zlFVlS3iXbarnAjKeWTRk_vJTQLkhAMpcpxP-PuRP1F3WvNs84_1Mo310m_MNkM=s512-c" />
+          </a>
+        </div>
+        <div style="padding:16px;background:#f1f1f1">
+          <small>July 5, 2019</small>
+          <h4>
+            <a style="color:#333" href="#">Service Business Website Must Haves</a>
+          </h4>
+          <p class="mt-3">
+            <a style="color:#333" href="#">If you have a service business, there a couple key pages that your website...</a><a href="#">read more</a>
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
+
 </div>
 <!-- End Header -->
 
