--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -41,12 +41,12 @@
       <div class="sticky-top">
         <h5 class="font-weight-bold spanborder"><span>Site</span></h5>
         <div style="padding:24px;background:#dedafb">
-          <h2>Build Your Brand</h2>
+          <h2>{{site.name}}</h2>
           <div class="text-center mb-4 mt-3">
-            <img style="max-width:200px" src="https://lh3.googleusercontent.com/uFcvuH_Yifl0PaAMqcNIvuUqXl67M2hc54S523D1pwceSWrphPExoGe2rhPauCNjTgxzVQWSUolQTNeoow4m9mK5ibI" />
+            <img style="max-width:200px" src="{{{site.image}}}=s512" />
           </div>
-          <p>Vertex 360 is a platform for content creators in the modern media age. Whether you manage a YouTube channel, podcast, blog, Instagram folowing, or all of the above, Vertex 360 provides the best way to deliver your content under a unified, coherent brand that you control.</p>
-          <a href="/about" class="btn btn-danger w-100">Learn More</a>
+          <p>{{site.description}}</p>
+          <a target="_blank" href="/about" class="btn btn-danger w-100">View Site</a>
         </div>
       </div>
 
