no max image width

--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -43,7 +43,7 @@
         <div style="padding:24px;background:#dedafb">
           <h2>{{site.name}}</h2>
           <div class="text-center mb-4 mt-3">
-            <img style="max-width:200px" src="{{{site.image}}}=s512" />
+            <img src="{{{site.image}}}=s512" />
           </div>
           <p>{{site.description}}</p>
           <a target="_blank" href="/about" class="btn btn-danger w-100">View Site</a>
