--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -19,7 +19,7 @@
           </a>
         </div>
         <div style="padding:16px;background:#f1f1f1">
-          <small>July 5, 2019</small>
+          <small>Featured Site</small>
           <h4>
             <a style="color:#333" href="#">Service Business Website Must Haves</a>
           </h4>
@@ -38,7 +38,7 @@
           </a>
         </div>
         <div style="padding:16px;background:#f1f1f1">
-          <small>July 5, 2019</small>
+          <small>Featured Site</small>
           <h4>
             <a style="color:#333" href="#">Service Business Website Must Haves</a>
           </h4>
@@ -57,7 +57,7 @@
           </a>
         </div>
         <div style="padding:16px;background:#f1f1f1">
-          <small>July 5, 2019</small>
+          <small>Featured Site</small>
           <h4>
             <a style="color:#333" href="#">Service Business Website Must Haves</a>
           </h4>
