--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -18,7 +18,7 @@
 			<div class="mb-5 d-flex justify-content-between post-preview">
 				<div class="pr-4">
 					<h2 class="mb-1 h4">
-						<a class="text-dark" target="_blank" href="https://{{site_slug}}.vertex360.co/post/{{slug}}">{{title}}</a>
+						<a class="text-dark" target="_blank" href="{{{link}}}">{{title}}</a>
 					</h2>
 					<p class="text-muted">{{preview}}</p>
 					<div class="card-text text-muted small">
@@ -30,7 +30,7 @@
 							<a href="#">Comments</a>
 					</div>
 				</div>
-				<a target="_blank" href="https://{{site_slug}}.vertex360.co/post/{{slug}}">
+				<a target="_blank" href="{{{link}}}">
 					<img src="{{{image}}}=s220-c">
 				</a>
 			</div>
