connect site link

--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -46,7 +46,7 @@
             <img src="{{{site.image}}}=s512" />
           </div>
           <p>{{site.description}}</p>
-          <a target="_blank" href="/about" class="btn btn-danger w-100">View Site</a>
+          <a target="_blank" href="{{{site.link}}}" class="btn btn-danger w-100">View Site</a>
         </div>
       </div>
 
