--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -27,7 +27,7 @@
 							<span style="margin:6px">&middot;</span>
 							{{dateString}}
 							<span style="margin:6px">&middot;</span>
-							<a class="btn btn-sm btn-success comments-button" style="padding:0.12px 1px; box-shadow:none" href="#">Comments</a>
+							<a class="btn btn-sm btn-success comments-button" style="padding:0.12em 1em; box-shadow:none" href="#">Comments</a>
 					</div>
 				</div>
 				<a target="_blank" href="{{{link}}}">
@@ -63,7 +63,7 @@
         $(this).click(function(e){
           if (e)
             e.preventDefault()
-            
+
           console.log('CHECK COMMENTS')
 
         })
