--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -27,7 +27,7 @@
 							<span style="margin:6px">&middot;</span>
 							{{dateString}}
 							<span style="margin:6px">&middot;</span>
-							<a class="btn btn-sm btn-success comments-button" style="padding:0.12em 1em; box-shadow:none" href="#">Comments</a>
+							<a id="{{id}}" class="btn btn-sm btn-success comments-button" style="padding:0.12em 1em; box-shadow:none" href="#">Comments</a>
 					</div>
 				</div>
 				<a target="_blank" href="{{{link}}}">
@@ -64,7 +64,7 @@
           if (e)
             e.preventDefault()
 
-          console.log('CHECK COMMENTS')
+          console.log('CHECK COMMENTS: ' + $(this).getAttr('id'))
 
         })
       })
