--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -64,7 +64,7 @@
           if (e)
             e.preventDefault()
 
-          console.log('CHECK COMMENTS: ' + $(this).getAttr('id'))
+          console.log('CHECK COMMENTS: ' + $(this).attr('id'))
 
         })
       })
