console log response

--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -73,6 +73,7 @@
               return
             }
 
+            console.log('RESPONSE: ' + JSON.stringify(response))
             if (response.confirmation != 'success'){
               return
             }
