add preview to trhead subject

--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -99,7 +99,7 @@
             // not found, create one
             var params = {
               site: JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image}),
-              subject: JSON.stringify({id:selectedPost.id, schema:'post', title:selectedPost.title, slug:selectedPost.slug, image:selectedPost.image}),
+              subject: JSON.stringify({id:selectedPost.id, schema:'post', title:selectedPost.title, preview:selectedPost.preview, slug:selectedPost.slug, image:selectedPost.image}),
               slug: selectedPost.slug
             }
 
