--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -95,10 +95,11 @@
             }
 
             var site = data.site
+            var siteUrl = (site.url.legth==0) ? 'https://'+site.slug+'.vertex360.co' : site.url
 
             // not found, create one
             var params = {
-              site: JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image}),
+              site: JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image, url:siteUrl}),
               subject: JSON.stringify({id:selectedPost.id, schema:'post', title:selectedPost.title, preview:selectedPost.preview, slug:selectedPost.slug, image:selectedPost.image}),
               slug: selectedPost.slug
             }
